--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,5 @@
 version: '3'
 services:
-  mongodb:
-    image: mongo:latest
-    container_name: "mongodb"
-    environment:
-      - MONGO_DATA_DIR=/data/db
-      - MONGO_LOG_DIR=/dev/null
-      - MONGODB_USER="jample" 
-      - MONGODB_PASS="lwhplmmjmpfpsmzx"
-
-    volumes:
-      - ./data/db:/data/db
-    ports:
-        - 27017:27017
-    command: mongod --smallfiles --logpath=/dev/null # --quiet
-  redis:
-    image: redis:4.0.8-alpine
-    # ports: 
-    #   - "5678:5678"
-    # command: /usr/local/bin/resque-web -r redis://172.17.1.1:6379
   web:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -26,6 +7,6 @@ services:
       - .:/myapp
     ports:
       - "3000:3000"
-    depends_on:
-      - mongodb
-      - redis
+    # depends_on:
+    #   - mongodb
+    #   - redis
